# AC_Visual_Servoing

Aiswarya/thesis/ICRA_2019/: ICRA2019-Digest-Template.ppt
Aiswarya/thesis/ICRA_IMPROVEMENT/CODE_SNAC_new weight update law _/: aiswarya_1.m  aiswarya_2_NOTREQUIRED.m  aiswarya_3.m  twolinkmanip.m  twolinkmanip.m~  visualsur_trial.m  visualsur_trial.m~  visualsurvoing1.m  visualsurvoing1.m~
Aiswarya/thesis/codes/Dynamic control_self tuning/: C_full_4dof.m  G_Vector_4dof.m  aiswarya_selftuning_4dof.m  dynamic_model_2R_manipulator.m  self_tuning_correct3_sinusoidal.m  trial1_aiswarya_selftuning_2dof.m
Aiswarya/thesis/codes/SNAC_new weight update law /: aiswarya_1.m  aiswarya_1.m~  aiswarya_2.m  aiswarya_3.m
Aiswarya/thesis/dynamic control/codes/: M_full_4dof (3).m  RAVI_slotine_2R_v2.m  TRIAL_aiswarya_selftuning_2dof.m  TRIAL_aiswarya_selftuning_2dof.m~  aiswarya_4.m  aiswarya_selftuning_2dof.m  aiswarya_selftuning_2dof.m~  aiswarya_selftuning_4dof.m  dynamic_model_2R_manipulator.m  kinematiccontrol.m~  kinematiccontrol_selftuning.m  matlab_crash_dump.30054-1  self_tuning_correct3_sinusoidal.m  trial2_aiswarya_selftuning_2dof.m  trial2_aiswarya_selftuning_2dof.m~
classic_ur_ws/IBVS DATA/SIMULATIONS/THESIS_FINAL11_COMPARISON-1NEURON/: Weight2.txt  Weight3.txt  Weight4.txt
classic_ur_ws/src/publisher/: CMakeLists.txt  package.xml
classic_ur_ws/src/publisher/src/: publisher_node.cpp
classic_ur_ws/src/robot_control/: CMakeLists.txt  package.xml
classic_ur_ws/src/robot_control/include/robot_control/: brick_wall_demo.h
classic_ur_ws/src/robot_control/src/: brick_wall_demo.cpp  image_transport_tutorial.cpp  moveit_tutorial.cpp  robot.cpp
classic_ur_ws/src/robot_control/src/trials/: manifest.cpp  resized_publisher.cpp  resized_subscriber.cpp
classic_ur_ws/src/subscriber/: CMakeLists.txt  package.xml
classic_ur_ws/src/subscriber/scripts/: geometry_msgs.msg  kinect_subscriber.py
classic_ur_ws/src/subscriber/src/: hsvtrackerbar.cpp  mohit_subscriber.cpp  (+5 more)
classic_ur_ws/src/universal_robot/ur_description/: CMakeLists.txt  package.xml
classic_ur_ws/src/universal_robot/ur_description/urdf/: common.gazebo (copy).xacro  common.gazebo.xacro  ur.gazebo (copy).xacro  ur.gazebo.xacro  ur5.urdf.xacro  ur5.urdf_copy.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
classic_ur_ws/src/universal_robot/ur_gazebo/: CMakeLists.txt  package.xml
classic_ur_ws/src/universal_robot/ur_gazebo/controller/: arm_controller_ur5 (2ndmay).yaml  arm_controller_ur5(velocitycontrol).yaml  arm_controller_ur5_copy.yaml
classic_ur_ws/src/universal_robot/ur_gazebo/launch/: controller_utils.launch  ur5.launch  ur5_copy.launch
classic_ur_ws/src/universal_robot/ur_gazebo/resources/: red_box.urdf  simple_ball.urdf  table.urdf
ravi_ur5_ws/src/ur5_ROS-Gazebo/: CMakeLists.txt  DMP.cpp  blocks_poses_publisher.cpp  blocks_spawner (org).cpp  blocks_spawner.cpp  resnet1_0.py  ur5_mp (org).py  ur5_mp.py  ur5_mp.py.autosave  ur5_servo.py  ur5_vision (org).py  ur5_vision.py  vs_main.py  vs_rotation_conversion.py  vsnet_trained.py  w.csv
(+74 files in other folders)
