<?xml version="1.0"?>
<package>
  <name>ur_description</name>
  <version>1.2.1</version>
  <description>
      URDF description for Universal UR5/10 robot arms
  </description>
  
  <author>Wim Meeussen</author>
  <author>Kelsey Hawkins</author>
  <author>Mathias Ludtke</author>
  <author>Felix Messmer</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ur_description</url>

  <buildtool_depend>catkin</buildtool_depend>

<build_depend>robot_state_publisher</build_depend>
<build_depend>controller_manager</build_depend>
<build_depend>joint_state_controller</build_depend>

  
<run_depend>robot_state_publisher</run_depend>
<run_depend>joint_state_controller</run_depend>
<run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
